gcc/testsuite/g++.dg/expr/cast2.C
void (*p)();

void f() {
  (void *)p; // { dg-error "" }
}
